<resources>
    <string name="app_name">Purple Cake Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Signup Activity -->
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">CREATE NEW ACCOUNT</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_link_to_signin">Already registered? Sign in to Purple Cake Shop!</string>
    <string name="toast_email">Please enter email address!</string>
    <string name="toast_password">Please enter password!</string>
    <string name="toast_too_short_password">"Password too short, please enter minimum 6 characters!</string>
    <string name="toast_auth_success">Authentication successful."</string>
    <string name="toast_auth_fail">Authentication failed, check your email and password.</string>
    <!-- Signup Activity -->

    <!-- Signin Activity -->
    <string name="btn_sign_in">SIGN IN</string>
    <string name="btn_link_to_signup">Not a member? Get registered in Cake Shop now!</string>
    <!-- Signin Activity -->

    <!-- Reset Activity -->
    <string name="btn_reset_password">Reset Password</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="toast_reg_email">Please enter your registered email.</string>
    <string name="toast_reset_success">We have sent you instructions how to reset your password!</string>
    <string name="toast_rest_fail">Failed to send reset email instructions!</string>
    <!-- Reset Activity -->

    <!-- Profile Fragment -->
    <string name="hint_new_email">New E-mail</string>
    <string name="hint_new_password">New Password</string>
    <string name="btn_change_email">Change E-mail</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_send">Send Reset E-mail</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="show_details">Show details info about me</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="remove_account">Remove account from the application</string>
    <string name="new_pass">New Password</string>
    <string name="toast_update_email">Email address is updated. Please sign in with new email!</string>
    <string name="toast_update_email_fail">Failed to update email!</string>
    <string name="toast_update_pass">Email address is updated. Please sign in with new email!</string>
    <string name="toast_update_pass_fail">Failed to update email!</string>
    <string name="toast_profile_delete">Your profile is deleted :( Create new account now!</string>
    <string name="toast_profile_delete_fail">Failed to delete your account!</string>
    <!-- Profile Fragment -->

    <!-- Home Fragment -->
    <string name="home_btn1">Birthday</string>
    <string name="home_btn2">Wedding</string>
    <string name="home_btn3">Anniversary</string>
    <string name="home_btn4">Cupcakes</string>
    <string name="home_btn5">Corporate</string>
    <string name="home_btn6">Special</string>
    <string name="home_txt1">PLEASE SELECT OCCASSION</string>
    <!-- Home Fragment -->

    <!-- About Fragment -->
    <string name="about1">SINCE 1900</string>
    <string name="about2">PURPLE CAKE SHOP</string>
    <string name="about3">Purple Cake Shop is known for our delicious pastries, desserts and cakes.\n</string>
    <string name="about4">Purple Cake Shop, originally opened by Carlo Guastaffero in 1900, was acquired by Bartolo Valastro Sr. in 1895. Since the untimely passing of Bartolo Sr. in 1890, matriarch Mary Valastro and her children Grace, Maddalena, Mary, Lisa and master baker Bartolo Jr. “Buddy” Valastro have expanded the business with the help of their spouses.\n</string>
    <string name="about5">Because of the Valastro family’s dedication to quality and excellence, Carlo’s has received national recognition. Master Baker Bartolo Jr. “Buddy” has been featured in numerous publications, such as Modern Bride, and The Knot.\n</string>
    <string name="about6">Buddy’s cake design was voted by the Today’s Show viewers as best cake in America. He has also appeared in many other media outlets, including multiple appearances on the Food Network, for his intricate sugar art designs specialty cakes and wedding cakes that look just as good as they taste.\n</string>
    <string name="about7">Purple Cake Shop is currently open in Hoboken, Marlton, Morristown, Red Bank, Ridgewood, Wayne, and Westfield, NJ; Las Vegas, NV; Dallas, Frisco, and The Woodlands, TX; Uncasville, CT; Orlando, FL; Bethlehem, and Philadelphia, PA; New York, and Westbury, NY; and, São Paulo, Brazil.\n</string>
    <!-- About Fragment -->

    <!-- Shops Fragment -->
    <string name="shops_title">Purple Cake Shops</string>
    <string name="shop1">300 Route 73 S. \nMarlton, New Jersey \nPhone (856) 452-5552 </string>
    <string name="shop2">40 Market Street \nMorristown, New Jersey \nPhone (973) 998-7771 </string>
    <string name="shop3">95 Washington Street \nHoboken, New Jersey \nPhone (201) 659-3671  </string>
    <string name="shop4">12 Wilsey Square \nRidgewood, New Jersey \nPhone(201) 962-9080 </string>
    <string name="shop5">86 Broad Street \nRed Bank, New Jersey \nPhone(732) 268-7710 </string>
    <string name="shop6">21 E. Broad Street \nWestfield, New Jersey \nPhone(908) 228-5525 </string>
    <string name="shop7">1400 Willowbrook Mall \nWayne, NJ \nPhone(201) 942-4642 </string>
    <string name="shop8"> </string>
    <!-- Shops Fragment -->

    <!-- Reservation Fragment -->
    <string name="reservation_txt1">Make reservation and enjoy Your time!</string>
    <string name="reservation_txt2">Name</string>
    <string name="reservation_txt3">Lastname</string>
    <string name="reservation_txt4">E-mail</string>
    <string name="reservation_txt5">Phone</string>
    <string name="reservation_txt6">Date</string>
    <string name="reservation_txt7">Time</string>
    <string name="reservation_txt8">Location</string>
    <string name="reservation_txt9">Seats</string>
    <string name="reservationbutton">Done</string>
    <!-- Reservation Fragment -->

    <!-- Rate Fragment -->
    <string name="rate1">Your rate leads us to improvement!</string>
    <string name="rate2">Tap a star to rate app</string>
    <string name="rate3">By clicking button Done you submit your rate</string>
    <string name="ratebutton">Done</string>
    <!-- Rate Fragment -->

    <!-- Anniversary Fragment -->
    <string name="anniversary_txt1">Love \nYou \n50KM</string>
    <string name="anniversary_txt2">Double Cake \n50KM</string>
    <string name="anniversary_txt3">Mocha Mousse \n60KM</string>
    <string name="anniversary_txt4">Haupia \n65KM</string>
    <string name="anniversary_txt5">King Arthur Cake \n70KM</string>
    <!-- Anniversary Fragment -->

    <!-- Birthday Fragment -->
    <string name="birthday_txt1">Choco \nTres Leches \n50KM</string>
    <string name="birthday_txt2">Michael’s \nFudge Cake \n50KM</string>
    <string name="birthday_txt3">Three layers \n60KM</string>
    <string name="birthday_txt4">Three Milks \n65KM</string>
    <string name="birthday_txt5">German \nChoco Cake \n70KM</string>
    <string name="birthday_txt6">Gold \nKing \n70KM</string>
    <!-- Birthday Fragment -->

    <!-- Corporate Fragment -->
    <string name="corporate_txt1">Silver Muffin \n30KM</string>
    <string name="corporate_txt2">Sweet Sticks \n30KM</string>
    <!-- Corporate Fragment -->

    <!-- Cupcakes Fragment -->
    <string name="cupcakes_txt1">Strawberry Muffin \n30KM</string>
    <string name="cupcakes_txt2">Rose Muffin \n30KM</string>
    <string name="cupcakes_txt3">Tiramisu Muffin \n30KM</string>
    <string name="cupcakes_txt4">Haupia \n30KM</string>
    <string name="cupcakes_txt5">Chantilly Cake \n30KM</string>
    <!-- Cupcakes Fragment -->

    <!-- Wedding Fragment -->
    <string name="wedding_txt1">Love You \n130KM</string>
    <string name="wedding_txt2">Choco \nRum Cake \n140KM</string>
    <string name="wedding_txt3">Four Seasons \n130KM</string>
    <string name="wedding_txt4">White Angel \n150KM</string>
    <string name="wedding_txt5">Red King \nCake \n150KM</string>
    <!-- Wedding Fragment -->

    <!-- Special Fragment -->
    <string name="special_txt1">Mickey Mouse \n100KM</string>
    <string name="special_txt2">Black \nForest Cake \n100KM</string>
    <string name="special_txt3">Minions Cakes \n110KM</string>
    <string name="special_txt4">Mac \nCosmetics Cake \n120KM</string>
    <string name="special_txt5">Photo \nCamera Cake \n120KM</string>
    <!-- Special Fragment -->

    <!-- Order Fragment -->
    <string name="order_txt1">Place an order and enjoy in sweets!</string>
    <string name="order_txt2">Name</string>
    <string name="order_txt3">Lastname</string>
    <string name="order_txt4">E-mail</string>
    <string name="order_txt5">Delivery Address</string>
    <string name="order_txt6">Cake Name</string>
    <string name="order_txt7">Add Note</string>
    <string name="orderbutton">Order</string>
    <!-- Order Fragment -->

    <string name="order">Order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>