<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="cake.shop.sa.Fragments.AboutFragment">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:src="@drawable/im_about"
        android:layout_alignParentRight="true" />

    <ScrollView
        android:layout_width="220dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/about1"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="10sp"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/text2"
                android:layout_below="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/about2"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:textColor="#ECEFF1"/>

            <TextView
                android:id="@+id/text3"
                android:layout_below="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about3"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"/>

            <TextView
            android:id="@+id/text4"
            android:layout_below="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about4"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="bottom"
            android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/text5"
                android:layout_below="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about5"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/text6"
                android:layout_below="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about6"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/text7"
                android:layout_below="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about7"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="bottom"
                android:textColor="#ffffff"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
