<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cake.shop.sa.Fragments.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:background="@drawable/im_home">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector1">

    <TextView
        android:id="@+id/home_txt1"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/home_txt1"
        android:textColor="#594370"
        android:textSize="15sp"
        android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_below="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

    <Button
        android:id="@+id/home_btn1"
        android:layout_gravity="left"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/home_btn1"
        android:textSize="13sp"
        android:textStyle="bold"
        android:cursorVisible="true"
        android:contextClickable="true"
        android:ellipsize="marquee"
        android:textColor="#594370"
        android:background="@drawable/button_selector2" />

    <Button
        android:id="@+id/home_btn2"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/home_btn2"
        android:textSize="13sp"
        android:textStyle="bold"
        android:cursorVisible="true"
        android:contextClickable="true"
        android:ellipsize="marquee"
        android:textColor="#594370"
        android:background="@drawable/button_selector2" />

        <Button
            android:id="@+id/home_btn3"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/home_btn3"
            android:textSize="13sp"
            android:textStyle="bold"
            android:cursorVisible="true"
            android:contextClickable="true"
            android:ellipsize="marquee"
            android:textColor="#594370"
            android:background="@drawable/button_selector2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_below="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/home_btn4"
            android:layout_gravity="left"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/home_btn4"
            android:textSize="13sp"
            android:textStyle="bold"
            android:cursorVisible="true"
            android:contextClickable="true"
            android:ellipsize="marquee"
            android:textColor="#594370"
            android:background="@drawable/button_selector2" />

        <Button
            android:id="@+id/home_btn5"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/home_btn5"
            android:textSize="13sp"
            android:textStyle="bold"
            android:cursorVisible="true"
            android:contextClickable="true"
            android:ellipsize="marquee"
            android:textColor="#594370"
            android:background="@drawable/button_selector2" />

        <Button
            android:id="@+id/home_btn6"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/home_btn6"
            android:textSize="13sp"
            android:textStyle="bold"
            android:cursorVisible="true"
            android:contextClickable="true"
            android:ellipsize="marquee"
            android:textColor="#594370"
            android:background="@drawable/button_selector2" />

    </LinearLayout>

</RelativeLayout>
