<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="cake.shop.sa.Fragments.ShopsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/im_shop1"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop1"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/im_shop2"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop2"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/im_shop3"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop3"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/im_shop4"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop4"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/im_shop5"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop5"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/im_shop6"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop6"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="174dp"
                    android:src="@drawable/im_shop7"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop7"
                    android:textSize="15sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
